--- a/frontend.yml
+++ b/frontend.yml
@@ -6,3 +6,9 @@
       ansible.builtin.dnf:
         name: nginx
         state: latest
+
+
+    - name: start nginx
+      ansible.builtin.systemd_service:
+        state: restarted
+        name: nginx
